--- a/questions/templates/questions/detail_question.html
+++ b/questions/templates/questions/detail_question.html
@@ -4,22 +4,14 @@
 {% block content %}
 <div class="max-w-6xl mx-auto mt-10 px-4">
     <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">{{ question.title }}</h1>
-
     <div class="bg-white shadow-md rounded-lg p-6">
-        <p class="mb-4">{{ question.description }}</p>
-
-        {% if question.format == 'image' %}
-            <img src="{{ question.image.url }}" alt="Question Image" class="mb-4">
+        <p class="text-gray-700 mb-4"><strong>题目格式：</strong> {{ question.get_format_display }}</p>
+        <p class="text-gray-700 mb-4"><strong>题目描述：</strong> {{ question.description }}</p>
+        {% if question.image %}
+        <p class="text-gray-700 mb-4"><strong>辅助图片：</strong></p>
+        <img src="{{ question.image.url }}" alt="辅助图片" class="mb-4">
         {% endif %}
-
-        <h2 class="text-2xl font-semibold text-gray-700 mb-4">选项:</h2>
-        <ul class="list-disc list-inside">
-            {% for option in question.options.all %}
-                <li class="mb-2">
-                    {{ option.option_text }} {% if option.is_correct %}<span class="text-green-500">(正确)</span>{% endif %}
-                </li>
-            {% endfor %}
-        </ul>
+        <p class="text-gray-700 mb-4"><strong>参考答案：</strong> {{ question.correct_answer }}</p>
     </div>
 </div>
 {% endblock %}
