fix:修复题目图片无法显示

--- a/questions/templates/questions/create_question.html
+++ b/questions/templates/questions/create_question.html
@@ -34,21 +34,21 @@
                 </div>
                 <div class="mb-4">
                     <label for="aux_image" class="block text-gray-700 font-bold mb-2">辅助图片</label>
-                    <input type="file" id="aux_image" name="aux_image" class="form-input mt-1 block w-full border rounded" accept="image/*">
+                    <input type="file" id="aux_image" name="image" class="form-input mt-1 block w-full border rounded" accept="image/*">
                 </div>
             </div>
             <div id="imageOptions" style="display: none;">
                 <div class="mb-4">
                     <label for="image_description" class="block text-gray-700 font-bold mb-2">题目描述</label>
-                    <input type="file" id="image_description" name="image_description" class="form-input mt-1 block w-full border rounded" accept="image/*">
+                    <input type="file" id="image_description" name="description_image" class="form-input mt-1 block w-full border rounded" accept="image/*">
                 </div>
                 <div class="mb-4">
                     <label for="image_answer" class="block text-gray-700 font-bold mb-2">参考答案</label>
-                    <input type="file" id="image_answer" name="image_answer" class="form-input mt-1 block w-full border rounded" accept="image/*">
+                    <input type="file" id="image_answer" name="correct_answer_image" class="form-input mt-1 block w-full border rounded" accept="image/*">
                 </div>
                 <div class="mb-4">
                     <label for="image_aux" class="block text-gray-700 font-bold mb-2">辅助图片</label>
-                    <input type="file" id="image_aux" name="image_aux" class="form-input mt-1 block w-full border rounded" accept="image/*">
+                    <input type="file" id="image_aux" name="image" class="form-input mt-1 block w-full border rounded" accept="image/*">
                 </div>
             </div>
             <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">创建问题</button>
