--- a/questions/templates/questions/detail_question.html
+++ b/questions/templates/questions/detail_question.html
@@ -2,16 +2,26 @@
 {% block title %}问题详情{% endblock %}
 
 {% block content %}
-<div class="max-w-6xl mx-auto mt-10 px-4">
-    <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">{{ question.title }}</h1>
-    <div class="bg-white shadow-md rounded-lg p-6">
-        <p class="text-gray-700 mb-4"><strong>题目格式：</strong> {{ question.get_format_display }}</p>
-        <p class="text-gray-700 mb-4"><strong>题目描述：</strong> {{ question.description }}</p>
-        {% if question.image %}
-        <p class="text-gray-700 mb-4"><strong>辅助图片：</strong></p>
-        <img src="{{ question.image.url }}" alt="辅助图片" class="mb-4">
-        {% endif %}
-        <p class="text-gray-700 mb-4"><strong>参考答案：</strong> {{ question.correct_answer }}</p>
+    <div class="max-w-6xl mx-auto mt-10 px-4">
+        <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">{{ question.title }}</h1>
+        <div class="bg-white shadow-md rounded-lg p-6">
+            <p class="text-gray-700 mb-4"><strong>题目标题：</strong> {{ question.title }}</p>
+            {% if question.description_image %}
+                <p class="text-gray-700 mb-4"><strong>题目描述：</strong></p>
+                <img src="{{ question.description_image.url }}" alt="题目描述" class="mb-4">
+            {% else %}
+                <p class="text-gray-700 mb-4"><strong>题目描述：</strong> {{ question.description }}</p>
+            {% endif %}
+            {% if question.image %}
+                <p class="text-gray-700 mb-4"><strong>辅助图片：</strong></p>
+                <img src="{{ question.image.url }}" alt="辅助图片" class="mb-4">
+            {% endif %}
+            {% if question.correct_answer_image %}
+                <p class="text-gray-700 mb-4"><strong>参考答案：</strong></p>
+                <img src="{{ question.correct_answer_image.url }}" alt="参考答案" class="mb-4">
+            {% else %}
+                <p class="text-gray-700 mb-4"><strong>参考答案：</strong> {{ question.correct_answer }}</p>
+            {% endif %}
+        </div>
     </div>
-</div>
 {% endblock %}
