--- a/questions/templates/questions/create_question_set.html
+++ b/questions/templates/questions/create_question_set.html
@@ -10,11 +10,11 @@
             {% csrf_token %}
             <div class="mb-4">
                 <label for="name" class="block text-gray-700 font-bold mb-2">题单名称</label>
-                <input type="text" id="name" name="name" class="form-input mt-1 block w-full">
+                <input type="text" id="name" name="name" class="form-input mt-1 block w-full border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500">
             </div>
             <div class="mb-4">
                 <label for="description" class="block text-gray-700 font-bold mb-2">题单描述</label>
-                <textarea id="description" name="description" class="form-textarea mt-1 block w-full"></textarea>
+                <textarea id="description" name="description" class="form-textarea mt-1 block w-full border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"></textarea>
             </div>
             <div class="flex justify-end">
                 <button type="button" onclick="submitQuestionSet()" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">
