--- a/templates/basehome.html
+++ b/templates/basehome.html
@@ -27,8 +27,8 @@
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">组管理</a>
                     <a href="/questions/management/"
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">问题管理</a>
-                    <a href="/selftest/"
-                       class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">自测错题</a>
+                    <a href="/questions/question_sets/"
+                       class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">练习题单</a>
                     <a href="/questions/share"
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">问题分享</a>
                     <a href="/visualization/"
