--- a/templates/basehome.html
+++ b/templates/basehome.html
@@ -28,7 +28,7 @@
                     <a href="/questions/management/"
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">问题管理</a>
                     <a href="/questions/question_sets/"
-                       class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">练习题单</a>
+                       class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">练习题目</a>
                     <a href="/questions/selftest"
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">错题回顾</a>
                     <a href="/visualization/"
