--- a/questions/templates/questions/detail_question.html
+++ b/questions/templates/questions/detail_question.html
@@ -6,6 +6,7 @@
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">{{ question.title }}</h1>
         <div class="bg-white shadow-md rounded-lg p-6">
             <p class="text-gray-700 mb-4"><strong>题目标题：</strong> {{ question.title }}</p>
+            <p class="text-gray-700 mb-4"><strong>科目：</strong> {{ question.get_subject_display }}</p>
             {% if question.description_image %}
                 <p class="text-gray-700 mb-4"><strong>题目描述：</strong></p>
                 <img src="{{ question.description_image.url }}" alt="题目描述" class="mb-4">
