--- a/templates/basehome.html
+++ b/templates/basehome.html
@@ -31,7 +31,7 @@
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">练习题目</a>
                     <a href="/questions/review_mistakes/"
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">错题回顾</a>
-                    <a href="/visualization/"
+                    <a href="/questions/visualization/"
                        class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">能力可视化</a>
                 </div>
             </div>
