--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
                 </li>
                 <li class="flex items-center">
                     <svg class="w-5 h-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                    实时协作学习
+                    协作分享学习
                 </li>
                 <li class="flex items-center">
                     <svg class="w-5 h-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
@@ -28,15 +28,15 @@
             <div class="space-y-4">
                 <div class="flex justify-between items-center">
                     <span class="text-gray-600">已完成题目</span>
-                    <span class="text-2xl font-bold text-green-500">152</span>
+                    <span class="text-2xl font-bold text-green-500">{{ completed_questions }}</span>
                 </div>
                 <div class="flex justify-between items-center">
                     <span class="text-gray-600">学习时长</span>
-                    <span class="text-2xl font-bold text-green-500">23小时</span>
+                    <span class="text-2xl font-bold text-green-500">{{ study_duration }}</span>
                 </div>
                 <div class="flex justify-between items-center">
-                    <span class="text-gray-600">能力提升</span>
-                    <span class="text-2xl font-bold text-green-500">+15%</span>
+                    <span class="text-gray-600">平均正确率</span>
+                    <span class="text-2xl font-bold text-green-500">{{ skill_improvement }}</span>
                 </div>
             </div>
         </div>
@@ -45,15 +45,15 @@
     <div class="mt-12 bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-2xl font-semibold text-gray-700 mb-4">开始学习</h2>
         <div class="grid md:grid-cols-3 gap-4">
-            <a href="#" class="block p-4 bg-green-100 rounded-lg text-center hover:bg-green-200 transition duration-300">
+            <a href="/questions/question_sets/" class="block p-4 bg-green-100 rounded-lg text-center hover:bg-green-200 transition duration-300">
                 <svg class="w-8 h-8 mx-auto mb-2 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg>
                 <span class="font-semibold text-green-700">练习题目</span>
             </a>
-            <a href="#" class="block p-4 bg-blue-100 rounded-lg text-center hover:bg-blue-200 transition duration-300">
+            <a href="/groups/management/" class="block p-4 bg-blue-100 rounded-lg text-center hover:bg-blue-200 transition duration-300">
                 <svg class="w-8 h-8 mx-auto mb-2 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                 <span class="font-semibold text-blue-700">加入小组</span>
             </a>
-            <a href="#" class="block p-4 bg-purple-100 rounded-lg text-center hover:bg-purple-200 transition duration-300">
+            <a href="/questions/visualization/" class="block p-4 bg-purple-100 rounded-lg text-center hover:bg-purple-200 transition duration-300">
                 <svg class="w-8 h-8 mx-auto mb-2 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"></path></svg>
                 <span class="font-semibold text-purple-700">查看能力分析</span>
             </a>
