--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -25,4 +25,25 @@
         </form>
     </div>
 </div>
+
+<style>
+    input[type="text"],
+    input[type="password"] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        font-size: 1rem;
+        color: #333;
+    }
+    input[type="text"]:focus,
+    input[type="password"]:focus {
+        border-color: #3182ce;
+        box-shadow: 0 0 5px rgba(49, 130, 206, 0.5);
+        outline: none;
+    }
+</style>
 {% endblock %}
